--- a/static.html
+++ b/static.html
@@ -1,8 +1,13 @@
 <title>SEC SLOT TIMETABLE</title>
+<BODY>
+	<IMG src="logo.png" 
+	height="100" width="600" align="center" border="2">
+</BODY>
+
 <table>
     <table border="4" width="600" cellspacing='4' cellpaddling='4'>
 
-<h2>  SLOT TIMETABLE-C.SANJAY(23013498)</h2>
+<h1>SLOT TIMETABLE-SANJAY C (23013498)</h1>
 <tr>
     <th align="center" bgcolor="yellow">Day/Time</th>
     <th align="center" bgcolor="red">Monday</th>
@@ -63,7 +68,7 @@
 <table border="4" width="600" cellspacing='4' cellpaddling='4'>
 
 <tr>
-    <th align="center">S.No</th>
+    <th align="center">S.NO</th>
     <th align="center">SUBJECT CODE</th> 
     <th align="center">SUBJECT NAME</th>
 </tr>
